fix: minor css fix padding and gap to main and list

--- a/Sass/mystyle.scss
+++ b/Sass/mystyle.scss
@@ -128,7 +128,12 @@ footer {
     }
    
   }
-  main .list {
+  main {
+    padding: 20px;
+& .list {
     grid-template-columns: 1fr;
+    gap: 20px;
   }
+  }
+  
 }
